# MNEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  vcpkg.json
MNEngineCore/: CMakeLists.txt
MNEngineCore/include/MNEngineCore/: Core.hpp  Window.hpp
MNEngineCore/src/: Window.cpp
MNEngineRuntime/: CMakeLists.txt
MNEngineRuntime/src/: main.cpp
